--- a/web-content/index.html
+++ b/web-content/index.html
@@ -7,7 +7,7 @@
       <meta name="robots" content="all" />
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <link rel="shortcut icon" type="image/x-icon" href="https://m.youtube.com/static/favicon.ico">
-      <title>YouTube Downloader | Zaute Km</title>
+      <title>YouTube Downloader | liku cs</title>
       <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="/css/style.css">
       <style>
@@ -51,7 +51,7 @@
       <br>
       <footer class="footer">
          <div class="container">
-            <span class="copyright"><a style="text-decoration: none; color: #9C9AB3;" href="https://t.me/ZauteKm">© 2021 Zaute Km</a></span>
+            <span class="copyright"><a style="text-decoration: none; color: #9C9AB3;" href="https://t.me/likucs">© 2021 Liku Cs</a></span>
          </div>
       </footer>
       <script src="/js/home.js"></script>
