--- a/web-content/index.html
+++ b/web-content/index.html
@@ -20,7 +20,7 @@
          <img class="mxl" src="https://i.ibb.co/LtZgDVj/youtube.png">
       </div>
       <br><br>
-      <h3 style="text-align: center; color: #FFB200; font-family: 'Balsamiq Sans', cursive; font-size: 17px;">Enter Your YouTube URL Here <br>And Click On Download</h3>
+      <h3 style="text-align: center; color: #FFB200; font-family: 'Balsamiq Sans', cursive; font-size: 17px;">Enter Your YouTube URL Here <br>And Click On Download <br> Made by LiKu Cs </h3>
       <br><br><br>
       <div>
       <center>
@@ -51,7 +51,7 @@
       <br>
       <footer class="footer">
          <div class="container">
-            <span class="copyright"><a style="text-decoration: none; color: #9C9AB3;" href="https://t.me/likucs">© 2021 Liku Cs</a></span>
+            <span class="copyright"><a style="text-decoration: none; color: #9C9AB3;" href="https://t.me/iAmLiKu1">© 2021 Liku Cs</a></span>
          </div>
       </footer>
       <script src="/js/home.js"></script>
